added style.css and myscript.java

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		Super Cool 4800 Group Page
 	</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="myscript.js"></script>
 </head>
 
 <body>
